--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Local</title>
     <link rel="stylesheet" href="stiles.css">
+    <link rel="manifest" href="manifest.json">
+
 </head>
 <body>
 
@@ -50,5 +52,13 @@
 </div>
 
 <script src="app.js"></script>
+    <script>
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+    .then(() => console.log("Service Worker registrado"))
+    .catch(err => console.log("Error:", err));
+}
+</script>
+
 </body>
 </html>
